enhancement: implement wishlist routes
